--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minmal
+theme: just-the-docs
 title: tm41m docs
 description: Our documentation site for open-source development
