Add first release of docs

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: just-the-docs
 title: tm41m docs
 description: Our documentation site for open-source development
+
+logo: "/assets/images/site-logo-white-latest.png"
+favicon_ico: "/assets/images/favicon.ico"
+
+color_scheme: dark
