--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: just-the-docs
 title: tm41m docs
 description: Our documentation site for open-source development
 
-logo: "/assets/images/site-logo-white-latest.png"
+logo: "/assets/images/site-logo-latest.png"
 favicon_ico: "/assets/images/favicon.ico"
 
-color_scheme: dark
+color_scheme: tm41m-default
